# get-releasenote

./: LICENSE  READMD.md  README.md  action.yml  changelog.md  get-releaseonte.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  taskfile.yml  tox.ini
.github/workflows/: auto-approve.yml  codeql.yml  dependabot-auto-merge.yml  docker.yml  lint.yml
docker/: Dockerfile
src/: main.py
