[project]
name = "get-releasenote"
description = "GitHub action for extracting towncrier release notes per version"
version = "0.1.0"
authors = [
    { name="No767", email="73260931+No767@users.noreply.github.com"}
]
maintainers = [
    { name="No767", email="73260931+No767@users.noreply.github.com"}
]
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.9,<4"
keywords = [
    "towncrier-extractor"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/No767/get-releasenote"
Repository = "https://github.com/No767/get-releasenote"

[tool.pyright]
include = ["src/**"]
exclude = [
    "**/__pycache__", 
    "**/.mypy_cache", 
    "**/.dmpypy.json",
]
reportMissingImports = true
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
line-length = 88
include = ["src/**"]

[tool.ruff.lint]
ignore = [
    "E501", 
    "N999", 
    "E402", 
    "S311",
    "S101",
    
    # These are recommended by Ruff if the formatter is to be used: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002"
    ]
select = ["E", "F", "N", "ASYNC", "S", "ERA", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
    "src/tests"
]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"